--- a/css/style.scss
+++ b/css/style.scss
@@ -11,27 +11,27 @@
 }
 
 
-::-webkit-scrollbar {
-  width: 3px;
-  height: 8px;
-  border-radius: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #ffff;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background: #000;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #181818;
-}
+//::-webkit-scrollbar {
+//  width: 3px;
+//  height: 8px;
+//  border-radius: 5px;
+//}
+//
+///* Track */
+//::-webkit-scrollbar-track {
+//  background: #ffff;
+//}
+//
+///* Handle */
+//::-webkit-scrollbar-thumb {
+//  border-radius: 5px;
+//  background: #000;
+//}
+//
+///* Handle on hover */
+//::-webkit-scrollbar-thumb:hover {
+//  background: #181818;
+//}
 
 
 * {
@@ -407,9 +407,6 @@ input:checked + .slider-v3 {
   }
 }
 
-.custom-scroll::-webkit-scrollbar {
-  width: 2px;
-}
 .custom-scroll::-webkit-scrollbar-track {
   background: transparent;
 }
