--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<div class="w-full relative bg-[#0061C2] mt-[100px] flex-jc-c py-8" style="background-image: url(img/footer-bg.png)">
+<div class="w-full relative bg-[#0061C2] mt-10 sm:mt-[100px] flex-jc-c py-8" style="background-image: url(img/footer-bg.png)">
   <div class="container">
     <div class="flex-js-s md:flex-jsb-c flex-col md:flex-row">
       <h3 class="font-light text-[32px] lg:text-[44px] leading-[30px] md:leading-none text-white font-lena mb-5 md:mb-0">
