--- a/components/navbar.html
+++ b/components/navbar.html
@@ -102,37 +102,50 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
-  <a href="home.html">
-    <img src="img/logo-header.svg" alt="" class="w-[122px]">
-  </a>
-
-  <div class="flex-jsb-c gap-1">
-    <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] pb-4 px-4 sm:hidden z-[1000]">
+  <div class="flex-jsb-c py-2">
+    <a href="home.html">
+      <img src="img/logo-header.svg" alt="" class="w-[122px]">
     </a>
 
-    <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
-    </a>
+    <div class="flex-jsb-c gap-1">
+      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+      </a>
 
-    <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <div class="relative w-10 h-10 flex-jc-c  max-[576px]:mt-[2px]">
-        <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
-        <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
+      </a>
+
+      <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <div class="relative w-10 h-10 flex-jc-c  max-[576px]:mt-[2px]">
+          <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
+          <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+        </div>
       </div>
+
     </div>
 
+    <div class="flex-je-c gap-1" id="open-menu-mobile">
+      Меню
+      <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
+    </div>
   </div>
 
-  <div class="flex-je-c gap-1" id="open-menu-mobile">
-    Меню
-    <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
-  </div>
+
+  <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
+    <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
+      <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none" placeholder="Поиск по сайту">
+    </label>
+    <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+      <img src="img/icons/search-white.svg" alt="search-white">
+    </button>
+  </form>
 
 </div>
+<div class="mb-[140px] block sm:hidden"></div>
 
-<div class="container">
+<div class="container hidden sm:block">
   <div
       class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none sm:flex">
     <div class="w-full flex-jsb-c min-w-[1300px]">
