--- a/components/navbar.html
+++ b/components/navbar.html
@@ -110,14 +110,14 @@
 
     <div class="flex-jsb-c gap-1">
       <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-        <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+        <img src="img/icons/heard-blue.svg" alt="heard-blue" width="20" height="20">
       </a>
 
       <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
         <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
       </a>
 
-      <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+      <div class="flex-js-c gap-4 text-[18px] text-black text-medium ml-[-2px]">
         <div class="relative w-10 h-10 flex-jc-c  max-[576px]:mt-[2px]">
           <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
           <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
