--- a/components/navbar.html
+++ b/components/navbar.html
@@ -72,11 +72,11 @@
       </div>
 
 
-      <div class="flex-jsb-c gap-8">
+      <div class="flex-jsb-c gap-2 lg:gap-8">
 
 
         <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <img src="img/icons/heard-blue.svg" alt="heard-blue">
+          <img src="img/icons/heard-blue.svg" alt="heard-blue" class="w-6">
           <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
         </a>
 
