--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,4 +1,4 @@
-<div class="w-full h-[50px] bg-[#323232] hidden sm:block">
+<div class="w-full h-[40px] bg-[#323232] hidden sm:block">
   <div class="container h-full">
     <div class="w-full h-full flex items-center justify-between">
       <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
@@ -15,8 +15,8 @@
             <div>
               <a href="tel: 8 921 903 53 50" class="text-white text-nowrap hidden md:block">8 921 903 53 50</a>
             </div>
-            <div class="ml-[4px]">
-              <a href="#" class="text-blue text-[14px] underline hidden lg:block">
+            <div class="ml-[3.2px]">
+              <a href="#" class="text-blue text-[11.2px] underline hidden lg:block">
                 Обратный звонок
               </a>
             </div>
@@ -41,31 +41,31 @@
     <div class="w-full flex-jsb-c gap-4">
       <div class="flex-js-c gap-4">
         <a href="/home.html">
-          <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
-          <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
+          <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[218.4px] hidden min-[1146.4px]:block">
+          <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[40px] block min-[1146.4px]:hidden">
         </a>
 
         <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white
-             hover:bg-blue/80 transition min-w-[150px] flex min-[640px]:hidden">
+            class="bg-blue rounded-[6.4px] px-6 h-[40px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white
+             hover:bg-blue/80 transition min-w-[120px] flex min-[512px]:hidden">
           <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
           Каталог
         </button>
       </div>
 
-      <div class="flex-jsb-c gap-4 min-[640px]:flex flex-grow">
+      <div class="flex-jsb-c gap-4 min-[512px]:flex flex-grow">
         <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[640px]:flex-jsb-c gap-3 text-white
-             hover:bg-blue/80 transition min-w-[150px] flex max-[640px]:hidden">
+            class="bg-blue rounded-[6.4px] px-6 h-[40px] flex-js-c min-w-[512px]:flex-jsb-c gap-3 text-white
+             hover:bg-blue/80 transition min-w-[120px] flex max-[512px]:hidden">
           <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
           Каталог
         </button>
-        <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px] hidden min-[640px]:flex">
-          <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
-            <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
+        <form action="#" class="w-full min-[1062.4px]:mr-9 bg-blue rounded-[6.4px] flex-jsb-c h-[40px] p-[1.6px] hidden min-[512px]:flex">
+          <label class="w-full h-full bg-white rounded-[4.8px] overflow-hidden">
+            <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[4.8px] border-none"
                    placeholder="Поиск по сайту">
           </label>
-          <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+          <button class="w-[64px] h-[40px] bg-transparent flex-jc-c" type="submit">
             <img src="img/icons/search-white.svg" alt="search-white">
           </button>
         </form>
@@ -75,23 +75,23 @@
       <div class="flex-jsb-c gap-2 lg:gap-8">
 
 
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <a href="#" class="flex-js-c gap-4 text-[14.4px] text-black text-medium">
           <img src="img/icons/heard-blue.svg" alt="heard-blue" class="w-6">
-          <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
+          <span class="hidden min-[920px]:inline-block hover:text-blue transition">Избранное</span>
         </a>
 
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <a href="#" class="flex-js-c gap-4 text-[14.4px] text-black text-medium">
           <img src="img/icons/rows-block.svg" alt="rows-block">
-          <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Сравнения</span>
+          <span class="hidden min-[920px]:inline-block hover:text-blue transition">Сравнения</span>
         </a>
 
-        <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <div class="flex-js-c gap-4 text-[14.4px] text-black text-medium">
           <div class="relative w-10 h-10 flex-jc-c">
             <img src="img/icons/shop.svg" alt="card-blue">
             <span
-                class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+                class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[9.6px] text-white">2</span>
           </div>
-          <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
+          <span class="hidden min-[920px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
         </div>
 
       </div>
@@ -102,25 +102,25 @@
 </div>
 
 <div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] pb-4 px-4 sm:hidden z-[1000]">
+    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_12.8px_12.8px] pb-4 px-4 sm:hidden z-[1000]">
   <div class="flex-jsb-c py-2">
     <a href="home.html">
-      <img src="img/logo-header.svg" alt="" class="w-[122px]">
+      <img src="img/logo-header.svg" alt="" class="w-[97.6px]">
     </a>
 
     <div class="flex-jsb-c gap-1">
-      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+      <a href="#" class="flex-js-c gap-4 text-[14.4px] text-black text-medium">
         <img src="img/icons/heard-blue.svg" alt="heard-blue" width="20" height="20">
       </a>
 
-      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+      <a href="#" class="flex-js-c gap-4 text-[14.4px] text-black text-medium">
         <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
       </a>
 
-      <div class="flex-js-c gap-4 text-[18px] text-black text-medium ml-[-2px]">
-        <div class="relative w-10 h-10 flex-jc-c  max-[576px]:mt-[2px]">
+      <div class="flex-js-c gap-4 text-[14.4px] text-black text-medium ml-[-1.6px]">
+        <div class="relative w-10 h-10 flex-jc-c  max-[460.8px]:mt-[1.6px]">
           <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
-          <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+          <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[9.6px] text-white">2</span>
         </div>
       </div>
 
@@ -133,55 +133,55 @@
   </div>
 
 
-  <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
-    <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
-      <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none" placeholder="Поиск по сайту">
+  <form action="#" class="w-full min-[1062.4px]:mr-9 bg-blue rounded-[6.4px] flex-jsb-c h-[40px] p-[1.6px]">
+    <label class="w-full h-full bg-white rounded-[4.8px] overflow-hidden">
+      <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[4.8px] border-none" placeholder="Поиск по сайту">
     </label>
-    <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+    <button class="w-[64px] h-[40px] bg-transparent flex-jc-c" type="submit">
       <img src="img/icons/search-white.svg" alt="search-white">
     </button>
   </form>
 
 </div>
-<div class="mb-[140px] block sm:hidden"></div>
+<div class="mb-[112px] block sm:hidden"></div>
 
 <div class="container hidden sm:block">
   <div
-      class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none sm:flex">
-    <div class="w-full flex-jsb-c min-w-[1300px]">
-      <div class="flex-jsb-c gap-6 h-full w-[40%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+      class="w-full h-[53.6px] bg-[#F4F4F4] rounded-[12.8px] px-8 flex-jsb-c min-w-[1120px]:gap-16 overflow-x-auto bottom-scroll-none sm:flex">
+    <div class="w-full flex-jsb-c min-w-[1040px] pr-6">
+      <div class="flex-js-c gap-4 h-full">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue text-nowrap">
           <img src="img/icons/like-blue.svg" alt="like-blue.svg">
           Подарочные сертификаты
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           <img src="img/icons/percent.svg" alt="percent">
           Скидки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           <img src="img/icons/star-lik.svg" alt="star-lik">
           Новинки
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
-      <div class="flex-jsb-c gap-6 h-full w-[60%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+      <div class="min-w-[0.8px] w-[0.8px] h-[21.6px] bg-[#CACACA]"></div>
+      <div class="flex-jsb-c gap-6 h-full">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           Удилища
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           Катушки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           Приманки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           Аксессуары
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           Оснастка
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1032px]:text-[14.4px] font-medium hover:text-blue">
           Экипировка
         </a>
       </div>
@@ -193,9 +193,9 @@
 
 
 
-<div id="mobile-menu" class="fixed top-0 left-0 w-full h-[100dvh] bg-black/20 backdrop-blur-[2px] z-[1000] opacity-0 invisible !transition-all translate-x-[100%] [&.active]:opacity-100 [&.active]:translate-x-[0] [&.active]:visible">
-  <div class="absolute right-0 top-0 w-[90%] bg-white h-full flex-js-s flex-col">
-    <div class="w-full min-h-[56px] border-b px-4 flex-jsb-c">
+<div id="mobile-menu" class="fixed top-0 left-0 w-full h-[100dvh] bg-black/20 backdrop-blur-[1.6px] z-[1000] opacity-0 invisible !transition-all translate-x-[80%] [&.active]:opacity-100 [&.active]:translate-x-[0] [&.active]:visible">
+  <div class="absolute right-0 top-0 w-[72%] bg-white h-full flex-js-s flex-col">
+    <div class="w-full min-h-[44.8px] border-b px-4 flex-jsb-c">
       <div class="flex-js-c gap-1">
         <img src="img/icons/location-blue.svg" alt="location-blue">
         г. Москва
@@ -207,18 +207,18 @@
 
     <div id="menu-items" class="w-full flex-grow overflow-y-auto custom-scroll">
       <div class="group">
-        <div class="w-full h-11 px-4 border-b text-[18px] text-[#6E6E6E] flex-jsb-c uppercase">
+        <div class="w-full h-11 px-4 border-b text-[14.4px] text-[#6E6E6E] flex-jsb-c uppercase">
           Контакты
         </div>
       </div>
       <div class="group">
-        <div class="w-full h-11 px-4 border-b text-[18px] text-[#6E6E6E] flex-jsb-c uppercase">
+        <div class="w-full h-11 px-4 border-b text-[14.4px] text-[#6E6E6E] flex-jsb-c uppercase">
           Покупателям
           <img src="img/icons/arrow-right.svg" alt="">
         </div>
       </div>
       <div class="group">
-        <div class="w-full h-11 px-4 border-b text-[18px] text-[#6E6E6E] flex-jsb-c uppercase mobile-menu-item">
+        <div class="w-full h-11 px-4 border-b text-[14.4px] text-[#6E6E6E] flex-jsb-c uppercase mobile-menu-item">
           Каталог
           <img src="img/icons/arrow-right.svg" alt="" class="transition transform group-[.active]:rotate-[-90deg]">
         </div>
@@ -434,15 +434,15 @@
       <div class="w-full h-3 bg-[#E9E9E9] min-h-3"></div>
 
       <div class="w-full p-4">
-        <a href="tel: 8 (800) 101-86-53" class="text-[24px] font-medium">8 (800) 101-86-53</a>
-        <a href="tel: 8 (800) 101-86-53" class="text-[24px] font-medium">8 (921) 903-53-50</a>
+        <a href="tel: 8 (800) 101-86-53" class="text-[19.2px] font-medium">8 (800) 101-86-53</a>
+        <a href="tel: 8 (800) 101-86-53" class="text-[19.2px] font-medium">8 (921) 903-53-50</a>
 
         <a href="mailto: fishemania777@yandex.ru" class="text-blue underline">fishemania777@yandex.ru</a>
-        <p class="text-[14px] text-[#212121] mt-2">
+        <p class="text-[11.2px] text-[#212121] mt-2">
           Пн-Пт : с 10:00 до 18:00 <br>
           Сб-Вс : Выходные
         </p>
-        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition mt-3 h-[54px] px-6 rounded-[8px] text-white font-bold w-full">
+        <button class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition mt-3 h-[43.2px] px-6 rounded-[6.4px] text-white font-bold w-full">
           Обратный звонок
         </button>
 
@@ -452,7 +452,7 @@
     </div>
 
     <div id="menu-items-children" class="w-full flex-grow overflow-y-auto custom-scroll hidden">
-      <div class="w-full py-2 flex-js-c px-6 gap-2 text-[24px] font-medium" id="go-back-menu">
+      <div class="w-full py-2 flex-js-c px-6 gap-2 text-[19.2px] font-medium" id="go-back-menu">
         <img src="img/icons/arrow-right.svg" alt="arrow-right" class="transform rotate-180 opacity-70">
         Удилища
       </div>
@@ -523,16 +523,16 @@
         </div>
 
         <div class="w-full p-4 grid grid-cols-2 gap-4">
-          <div class="w-full flex-jc-c px-4 py-2 border rounded-[6px]">
+          <div class="w-full flex-jc-c px-4 py-2 border rounded-[4.8px]">
             <img src="img/brand-img1.png">
           </div>
-          <div class="w-full flex-jc-c px-4 py-2 border rounded-[6px]">
+          <div class="w-full flex-jc-c px-4 py-2 border rounded-[4.8px]">
             <img src="img/brand-img2.png">
           </div>
-          <div class="w-full flex-jc-c px-4 py-2 border rounded-[6px]">
+          <div class="w-full flex-jc-c px-4 py-2 border rounded-[4.8px]">
             <img src="img/brand-img3.png">
           </div>
-          <div class="w-full flex-jc-c px-4 py-2 border rounded-[6px]">
+          <div class="w-full flex-jc-c px-4 py-2 border rounded-[4.8px]">
             <img src="img/brand-img4.png">
           </div>
         </div>
