--- a/components/navbar.html
+++ b/components/navbar.html
@@ -331,7 +331,7 @@
     </ul>
   </div>
 
-  <div id="catalog-menu-details" class="w-[calc(100%-350px)] xl:w-[calc(100%-480px)] xxl:min-w-[600px] max-h-[calc(100dvh-130px)] overflow-y-auto  bg-white absolute left-[350px] xl:left-[489px] top-[80px] p-8 z-[10001] opacity-0 invisible transition-opacity duration-300 delay-100">
+  <div id="catalog-menu-details" class="w-[calc(100%-350px)] xl:w-[calc(100%-480px)] max-w-[1340px] xxl:min-w-[600px] max-h-[calc(100dvh-130px)] overflow-y-auto  bg-white absolute left-[350px] xl:left-[489px] top-[80px] p-8 z-[10001] opacity-0 invisible transition-opacity duration-300 delay-100">
     <h4 class="text-[32px] font-medium">Удилища</h4>
     <div class="w-full flex-jsb-s mt-6 gap-4 xl:gap-8 flex-wrap ">
       <ul class="min-w-[264px]">
@@ -449,7 +449,7 @@
         </div>
       </div>
 
-      <div class="w-[443px] h-[353px] hidden min-[1800px]:block overflow-hidden rounded-[16px] p-8 relative">
+      <div class="w-full lg:w-[443px] h-[353px] overflow-hidden rounded-[16px] p-8 relative">
         <img src="img/menu-banner.png" alt="menu-banner.png" class="w-full h-full object-cover absolute left-0 top-0">
 
         <div class="relative z-10">
