--- a/components/footer.html
+++ b/components/footer.html
@@ -1,11 +1,14 @@
 <div class="w-full relative bg-[#0061C2] mt-10 sm:mt-[100px] flex-jc-c py-8" style="background-image: url(img/footer-bg.png)">
   <div class="container">
     <div class="flex-js-s md:flex-jsb-c flex-col md:flex-row">
-      <h3 class="font-light text-[32px] lg:text-[44px] leading-[30px] md:leading-none text-white font-lena mb-5 md:mb-0">
-        Работаем с 2009 года
-      </h3>
-      <div class="w-full md:w-1/2">
+      <div>
+        <h3 class="font-light text-[32px] lg:text-[44px] leading-[30px] md:leading-none text-white font-lena mb-5 md:mb-0">
+         Работаем с 2009 года
+        </h3>
         <p class="text-white">Получай наши новости, акции, советы и рекомендации экспертов</p>
+      </div>
+      <div class="w-full md:w-1/2">
+        
         <form action="#" class="w-full mt-2" id="footer-form">
           <div class="flex-jsb-c max-[431px]:flex-col gap-4">
             <label class="w-full h-[54px] bg-white overflow-hidden rounded-[8px] relative">
@@ -89,12 +92,12 @@
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue text-nowrap">
                 Зимняя рыбалка
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue text-nowrap">
                 Одежда и обувь
               </a>
             </li>
