--- a/components/navbar.html
+++ b/components/navbar.html
@@ -74,7 +74,7 @@
           <img src="img/icons/xmark.svg" alt="menu-catalog" class="brightness-[9]">
           Каталог
         </button>
-        <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[42px] p-[2px] hidden min-[640px]:flex">
+        <form action="#" class="w-full min-[1328px]:mr-4 bg-blue rounded-[8px] flex-jsb-c h-[42px] p-[2px] hidden min-[640px]:flex">
           <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
             <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none text-[14px]"
                    placeholder="Поиск по сайту">
@@ -89,17 +89,17 @@
       <div class="flex-jsb-c gap-2 lg:gap-8">
 
 
-        <a href="#" class="flex-js-c gap-4 text-[14px] text-black text-medium">
+        <a href="#" class="flex-js-c gap-2 text-[14px] text-black text-medium">
           <img src="img/icons/heard-blue.svg" alt="heard-blue" class="w-6">
           <span class="hidden min-[1150px]:inline-block hover:text-blue transition text-[14px]">Избранное</span>
         </a>
 
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <a href="#" class="flex-js-c gap-2 text-[18px] text-black text-medium">
           <img src="img/icons/rows-block.svg" alt="rows-block">
           <span class="hidden min-[1150px]:inline-block hover:text-blue transition text-[14px]">Сравнения</span>
         </a>
 
-        <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <div class="flex-js-c gap-2 text-[18px] text-black text-medium">
           <div class="relative w-10 h-10 flex-jc-c">
             <img src="img/icons/shop.svg" alt="card-blue">
             <span
@@ -516,24 +516,24 @@
 <div class="container hidden sm:block">
   <div
       class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none sm:flex">
-    <div class="w-full flex-js-c min-w-[1300px]">
-      <div class="flex-js-c gap-6 h-full w-[40%]">
-        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
+    <div class="w-full flex-js-c">
+      <div class="flex-js-c gap-6 h-full w-[500px]">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue text-nowrap mr-4">
           <img src="img/icons/like-blue.svg" alt="like-blue.svg">
           Подарочные сертификаты
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue mr-4">
           <img src="img/icons/percent.svg" alt="percent">
           Скидки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue mr-4">
           <img src="img/icons/star-lik.svg" alt="star-lik">
           Новинки
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mr-8"></div>
-      <div class="flex-js-c gap-6 h-full w-[60%]">
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8"></div>
+      <div class="flex-jsb-c gap-6 h-full grow-[1]">
         <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Удилища
         </a>
@@ -549,7 +549,7 @@
         <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Оснастка
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue mr-10">
           Экипировка
         </a>
       </div>
