--- a/css/output.css
+++ b/css/output.css
@@ -1329,6 +1329,10 @@ select{
   left: 32%;
 }
 
+.left-\[350px\]{
+  left: 350px;
+}
+
 .left-\[489px\]{
   left: 489px;
 }
@@ -1433,20 +1437,12 @@ select{
   top: 7px;
 }
 
-.top-\[calc\(100\%\+6px\)\]{
-  top: calc(100% + 6px);
-}
-
-.top-\[90px\]{
-  top: 90px;
-}
-
 .top-\[80px\]{
   top: 80px;
 }
 
-.left-\[350px\]{
-  left: 350px;
+.top-\[calc\(100\%\+6px\)\]{
+  top: calc(100% + 6px);
 }
 
 .z-0{
@@ -1469,18 +1465,6 @@ select{
   z-index: 100000;
 }
 
-.z-\[1000\]{
-  z-index: 1000;
-}
-
-.z-\[100\]{
-  z-index: 100;
-}
-
-.z-\[1001\]{
-  z-index: 1001;
-}
-
 .z-\[10000\]{
   z-index: 10000;
 }
@@ -1489,8 +1473,12 @@ select{
   z-index: 10001;
 }
 
-.z-\[100001\]{
-  z-index: 100001;
+.z-\[1000\]{
+  z-index: 1000;
+}
+
+.z-\[100\]{
+  z-index: 100;
 }
 
 .order-1{
@@ -2081,6 +2069,14 @@ select{
   margin-top: auto;
 }
 
+.mr-4{
+  margin-right: 1rem;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -2397,6 +2393,10 @@ select{
   height: 90px;
 }
 
+.h-\[calc\(100dvh-140px\)\]{
+  height: calc(100dvh - 140px);
+}
+
 .h-\[calc\(100dvh-162px\)\]{
   height: calc(100dvh - 162px);
 }
@@ -2409,32 +2409,24 @@ select{
   height: 100%;
 }
 
-.h-\[calc\(100dvh-150px\)\]{
-  height: calc(100dvh - 150px);
+.h-\[426px\]{
+  height: 426px;
 }
 
-.h-\[calc\(100dvh-140px\)\]{
-  height: calc(100dvh - 140px);
+.h-\[380px\]{
+  height: 380px;
 }
 
-.h-\[\]{
-  height: ;
+.h-\[305px\]{
+  height: 305px;
 }
 
-.h-\[cal\]{
-  height: cal;
+.h-\[350px\]{
+  height: 350px;
 }
 
-.h-\[calx\(\)\]{
-  height: calx();
-}
-
-.h-\[calx\(100vh-\)\]{
-  height: calx(100vh-);
-}
-
-.h-\[calx\(100vh-200px\)\]{
-  height: calx(100vh-200px);
+.h-\[290px\]{
+  height: 290px;
 }
 
 .max-h-80{
@@ -2451,18 +2443,6 @@ select{
 
 .max-h-\[80\%\]{
   max-height: 80%;
-}
-
-.max-h-\[calx\(100vh-200px\)\]{
-  max-height: calx(100vh-200px);
-}
-
-.max-h-\[calc\(100dvh-140px\)\]{
-  max-height: calc(100dvh - 140px);
-}
-
-.max-h-\[calc\(100dvh-150px\)\]{
-  max-height: calc(100dvh - 150px);
 }
 
 .max-h-\[calc\(100dvh-130px\)\]{
@@ -2573,6 +2553,10 @@ select{
   width: 33.6px;
 }
 
+.w-\[350px\]{
+  width: 350px;
+}
+
 .w-\[38\.4\%\]{
   width: 38.4%;
 }
@@ -2677,6 +2661,10 @@ select{
   width: calc(100% - 16px);
 }
 
+.w-\[calc\(100\%-350px\)\]{
+  width: calc(100% - 350px);
+}
+
 .w-auto{
   width: auto;
 }
@@ -2685,36 +2673,8 @@ select{
   width: 100%;
 }
 
-.w-\[calc\(1\)\]{
-  width: calc(1);
-}
-
-.w-\[calc\(100\)\]{
-  width: calc(100);
-}
-
-.w-\[calc\(100\%\)\]{
-  width: calc(100%);
-}
-
-.w-\[calc\(100\%-\)\]{
-  width: calc(100% - );
-}
-
-.w-\[calc\(100\%-500px\)\]{
-  width: calc(100% - 500px);
-}
-
-.w-\[calc\(100\%-480px\)\]{
-  width: calc(100% - 480px);
-}
-
-.w-\[350px\]{
-  width: 350px;
-}
-
-.w-\[calc\(100\%-350px\)\]{
-  width: calc(100% - 350px);
+.w-\[500px\]{
+  width: 500px;
 }
 
 .min-w-10{
@@ -2815,6 +2775,10 @@ select{
 
 .max-w-\[1300px\]{
   max-width: 1300px;
+}
+
+.max-w-\[1340px\]{
+  max-width: 1340px;
 }
 
 .max-w-\[136px\]{
@@ -2961,18 +2925,6 @@ select{
   max-width: 28rem;
 }
 
-.max-w-\[\]{
-  max-width: ;
-}
-
-.max-w-\[900px\]{
-  max-width: 900px;
-}
-
-.max-w-\[1340px\]{
-  max-width: 1340px;
-}
-
 .flex-1{
   flex: 1 1 0%;
 }
@@ -2983,6 +2935,15 @@ select{
 
 .grow-\[1\]{
   flex-grow: 1;
+}
+
+.grow{
+  flex-grow: 1;
+}
+
+.-translate-x-full{
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-1\/2{
@@ -3007,11 +2968,6 @@ select{
 
 .translate-y-\[-50\%\]{
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-full{
-  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -3387,6 +3343,10 @@ select{
   border-radius: 0.375rem;
 }
 
+.rounded-\[16\]{
+  border-radius: 16;
+}
+
 .border{
   border-width: 1px;
 }
@@ -3513,11 +3473,6 @@ select{
 
 .border-t-\[rgba\(33\2c 33\2c 33\2c 0\.25\)\]{
   border-top-color: rgba(33,33,33,0.25);
-}
-
-.border-b-\[\#D7DBDF\]{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(215 219 223 / var(--tw-border-opacity, 1));
 }
 
 .\!bg-transparent{
@@ -3720,6 +3675,10 @@ select{
 
 .bg-white\/50{
   background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-\[\#E8E8E880\]{
+  background-color: #E8E8E880;
 }
 
 .bg-\[linear-gradient\(101deg\2c _\#587AFF_-5\.69\%\2c _\#7144F5_44\.08\%\2c _\#D426FF_111\.99\%\)\]{
@@ -4123,6 +4082,14 @@ select{
   padding-top: 64px;
 }
 
+.pt-5{
+  padding-top: 1.25rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -4384,6 +4351,10 @@ select{
   letter-spacing: -1.7px;
 }
 
+.tracking-\[-2px\]{
+  letter-spacing: -2px;
+}
+
 .\!text-white{
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
@@ -4574,14 +4545,14 @@ select{
   transition-duration: 300ms;
 }
 
-.transition-transform{
-  transition-property: transform;
+.transition-opacity{
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
 }
 
-.transition-opacity{
-  transition-property: opacity;
+.transition-transform{
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 300ms;
 }
@@ -4724,6 +4695,10 @@ select{
   background-color: rgb(207 48 27 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-\[\#CF301B\]\/80:hover{
+  background-color: rgb(207 48 27 / 0.8);
+}
+
 .hover\:bg-\[\#CF301B\]\/90:hover{
   background-color: rgb(207 48 27 / 0.9);
 }
@@ -4760,10 +4735,6 @@ select{
 
 .hover\:bg-white\/80:hover{
   background-color: rgb(255 255 255 / 0.8);
-}
-
-.hover\:bg-\[\#CF301B\]\/80:hover{
-  background-color: rgb(207 48 27 / 0.8);
 }
 
 .hover\:\!text-blue:hover{
@@ -4917,18 +4888,6 @@ select{
 
   .max-\[1280px\]\:flex{
     display: flex;
-  }
-
-  .max-\[1280px\]\:w-\[16vw\]{
-    width: 16vw;
-  }
-
-  .max-\[1280px\]\:w-\[11vw\]{
-    width: 11vw;
-  }
-
-  .max-\[1280px\]\:w-\[300px\]{
-    width: 300px;
   }
 
   .max-\[1280px\]\:w-\[14vw\]{
@@ -5819,6 +5778,10 @@ select{
     height: 570px;
   }
 
+  .sm\:h-\[378px\]{
+    height: 378px;
+  }
+
   .sm\:w-\[240px\]{
     width: 240px;
   }
@@ -6031,6 +5994,11 @@ select{
     padding-right: 95px;
   }
 
+  .md\:px-\[60px\]{
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
   .md\:pb-0{
     padding-bottom: 0px;
   }
@@ -6061,6 +6029,10 @@ select{
 
   .md\:leading-none{
     line-height: 1;
+  }
+
+  .md\:leading-\[65px\]{
+    line-height: 65px;
   }
 
   .md\:transition{
@@ -6198,6 +6170,30 @@ select{
 }
 
 @media (min-width: 1250px){
+  .min-\[1250px\]\:ml-\[-35px\]{
+    margin-left: -35px;
+  }
+
+  .min-\[1250px\]\:mr-\[-35px\]{
+    margin-right: -35px;
+  }
+
+  .min-\[1250px\]\:ml-\[-25px\]{
+    margin-left: -25px;
+  }
+
+  .min-\[1250px\]\:mr-\[-25px\]{
+    margin-right: -25px;
+  }
+
+  .min-\[1250px\]\:h-\[60px\]{
+    height: 60px;
+  }
+
+  .min-\[1250px\]\:w-\[60px\]{
+    width: 60px;
+  }
+
   .min-\[1250px\]\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -6271,10 +6267,6 @@ select{
   .xl\:leading-\[75px\]{
     line-height: 75px;
   }
-
-  .min-\[1280px\]\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1300px){
@@ -6290,6 +6282,10 @@ select{
 @media (min-width: 1328px){
   .min-\[1328px\]\:mr-9{
     margin-right: 2.25rem;
+  }
+
+  .min-\[1328px\]\:mr-4{
+    margin-right: 1rem;
   }
 
   .min-\[1328px\]\:w-\[486px\]{
